# UAViSec

./: .gitignore  LICENSE  README.md  install.sh  requirements.txt
px4/: SimulatorMavlink.cpp  mavlink_receiver.cpp
spoofer/: CMakeLists.txt  README.md  build.sh  sensor_logger.cc  spoofer.cc
spoofer/sensors/: Groundtruth.pb.cc  Groundtruth.pb.h  Imu.pb.cc  Imu.pb.h  MagneticField.pb.cc  MagneticField.pb.h  Pressure.pb.cc  Pressure.pb.h  SITLGps.pb.cc  SITLGps.pb.h  quaternion.pb.h  vector3d.pb.h
spoofer/sensors/protos/: SITLGps.proto
vision/: README.md  capture.py  gst-dark.sh  rtp2rtsp.py  yolo.py
